--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
-  "homepage": "https://albertojesu.com",
-  "name": "portfolio_website",
+  "name": "my-personal-website",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
