--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -30,6 +30,9 @@ jobs:
     
     - name: Build project
       run: CI=false npm run build
+      
+    - name: Start Chatbot
+      run: npm run frontend
 
     - name: Upload production-ready build files
       uses: actions/upload-artifact@v2
