--- a/package.json
+++ b/package.json
@@ -38,8 +38,8 @@
     "yarn": "^1.22.4"
   },
   "scripts": {
-    "frontend": "node index.js",
-    "start": "concurrently \"npm run start:dev\" \"npm run frontend\"",
+    "backend": "node index.js",
+    "start": "concurrently \"npm run start:dev\" \"npm run backend\"",
     "start:dev": "react-scripts start",
     "build": "react-scripts build --prefix client",
     "test": "react-scripts test",
