--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "dialogflow": "^1.2.0",
     "dialogflow-fulfillment": "^0.6.1",
     "express": "^4.16.4",
+    "he": "^1.2.0",
     "http-proxy-middleware": "^0.19.1",
     "ityped": "^1.0.3",
-    "markdown-to-jsx": "^7.1.3",
     "pm2": "^5.2.2",
     "pts": "^0.9.1",
     "raw.macro": "^0.4.2",
@@ -28,11 +28,14 @@
     "react-awesome-slider": "^4.1.0",
     "react-dom": "^16.13.1",
     "react-markdown": "^7.0.1",
+    "react-modal": "^3.16.1",
     "react-responsive": "^9.0.0-beta.6",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "3.4.0",
+    "react-scripts": "^5.0.1",
+    "react-vertical-timeline-component": "^3.3.1",
     "scroll-to-element": "^2.0.3",
     "styled-components": "^5.3.3",
+    "swiper": "^10.0.0",
     "three": "^0.115.0",
     "universal-cookie": "^3.0.7",
     "uuid": "^3.3.2",
