--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -43,11 +43,11 @@ jobs:
     - name: Build project
       run: CI=false npm run build
 
-    # - name: Upload production-ready build files
-    #   uses: actions/upload-artifact@v2
-    #   with:
-    #     name: production-files
-    #     path: ./build
+    - name: Upload production-ready build files
+      uses: actions/upload-artifact@v2
+      with:
+        name: production-files
+        path: ./build
   
   deploy:
     name: Deploy
