--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -10,61 +10,70 @@ on:
       - master
 
 jobs:
-  build:
-    name: Build
+  lint:
+    permissions:
+      contents: read # for actions/checkout to fetch code
+      statuses: write # for super-linter/super-linter/slim to mark status of each linter run
+    name: Lint Code Base
     runs-on: ubuntu-latest
-    
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+      - name: "Checkout ${{ github.ref }} ( ${{ github.sha }} )"
+        uses: actions/checkout@v4
+        with:
+          # Full git history is needed to get a proper list of changed files within `super-linter`
+          fetch-depth: 0
+      - name: Lint Code Base
+        uses: super-linter/super-linter/slim@v6.7.0
+        env:
+          SAVE_SUPER_LINTER_OUTPUT: true
+          VALIDATE_JAVASCRIPT_ES: true
+          DEFAULT_BRANCH: master
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  # build:
+  #   name: Build
+  #   runs-on: ubuntu-latest
     
-    - name: Install Node.js
-      uses: actions/setup-node@v1
-      with:
-        node-version: 16.x
+  #   steps:
+  #   - name: Checkout code
+  #     uses: actions/checkout@v2
     
-    - name: Install NPM packages
-      run: npm ci
+  #   - name: Install Node.js
+  #     uses: actions/setup-node@v1
+  #     with:
+  #       node-version: 16.x
+    
+  #   - name: Install NPM packages
+  #     run: npm ci
       
-    - name: Update Browser list
-      run: npx browserslist --update-db
-
-    - name: Run ESLint and save output
-      id: eslint
-      run: |
-        npx eslint . --format json > eslint-output.json || true
-        echo "::set-output name=lint_output::$(cat eslint-output.json)"
-        echo "::set-output name=warning_count::$(jq '.[] | select(.errorCount > 0) | .warningCount' eslint-output.json | add)"
-
-    - name: Display warning count
-      run: |
-        echo "Total lint warnings: ${{ steps.eslint.outputs.warning_count }}"
+  #   - name: Update Browser list
+  #     run: npx browserslist --update-db
     
-    - name: Build project
-      run: CI=false npm run build
+  #   - name: Build project
+  #     run: CI=false npm run build
 
-    - name: Upload production-ready build files
-      uses: actions/upload-artifact@v2
-      with:
-        name: production-files
-        path: ./build
+  #   - name: Upload production-ready build files
+  #     uses: actions/upload-artifact@v2
+  #     with:
+  #       name: production-files
+  #       path: ./build
   
-  deploy:
-    name: Deploy
-    needs: build
-    runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/master'
+  # deploy:
+  #   name: Deploy
+  #   needs: build
+  #   runs-on: ubuntu-latest
+  #   if: github.ref == 'refs/heads/master'
     
-    steps:
-    - name: Download artifact
-      uses: actions/download-artifact@v2
-      with:
-        name: production-files
-        path: ./build
+  #   steps:
+  #   - name: Download artifact
+  #     uses: actions/download-artifact@v2
+  #     with:
+  #       name: production-files
+  #       path: ./build
 
-    - name: Deploy to gh-pages
-      uses: peaceiris/actions-gh-pages@v3
-      with:
-        deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
-        external_repository: gnpaone/gnpaone.github.io
-        publish_dir: ./build
+  #   - name: Deploy to gh-pages
+  #     uses: peaceiris/actions-gh-pages@v3
+  #     with:
+  #       deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
+  #       external_repository: gnpaone/gnpaone.github.io
+  #       publish_dir: ./build
