--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "homepage": "https://gnpaone.github.io",
+  "proxy": "http://localhost:5000",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
@@ -14,9 +15,11 @@
     "actions-on-google": "^2.5.0",
     "axios": "^0.18.1",
     "body-parser": "^1.18.3",
+    "cors": "^2.8.5",
     "dayjs": "^1.10.7",
     "dialogflow": "^1.2.0",
     "dialogflow-fulfillment": "^0.6.1",
+    "dotenv": "^16.4.5",
     "express": "^4.16.4",
     "he": "^1.2.0",
     "http-proxy-middleware": "^0.19.1",
